--- a/package.json
+++ b/package.json
@@ -27,10 +27,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.2.25"
-  },
   "devDependencies": {
+    "vue": "^3.2.25",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "sass": "^1.53.0",
