--- a/package.json
+++ b/package.json
@@ -1,39 +1,55 @@
 {
   "name": "drag-scroll-vue3",
+  "type": "module",
+  "license": "MIT",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "pub": "npm run build && npm publish"
+  },
   "private": false,
-  "version": "1.0.6",
+  "version": "1.1.0",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    }
+  },
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
   "files": [
     "dist"
   ],
-  "main": "./dist/drag-scroll-vue3.umd.js",
-  "module": "./dist/drag-scroll-vue3.es.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VashUber/drag-scroll-vue3.git"
   },
   "keywords": [
     "vue 3",
+    "vue",
     "drag scroll",
     "directive"
   ],
-  "exports": {
-    ".": {
-      "import": "./dist/drag-scroll-vue3.es.js",
-      "require": "./dist/drag-scroll-vue3.umd.js"
-    }
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+  "peerDependencies": {
+    "vue": "^3.4.21"
   },
   "devDependencies": {
-    "vue": "^3.2.25",
-    "@types/node": "^18.0.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "sass": "^1.53.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.12.12",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "npm-run-all2": "^6.2.0",
+    "prettier": "^3.2.5",
+    "sass": "^1.77.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
+    "vue": "^3.4.27",
+    "vue-tsc": "^2.0.19"
   }
 }
